This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2022-09-25:

- Backported support for 'print -u p' from ksh93v- 2014-06-06 (this is
  equivalent to using 'print -p').

- Fixed a bug introduced on 2021-04-04 that incorrectly allowed 'typeset' to
  turn off the readonly and export attributes on a readonly variable.

- Fixed multiple scoping-related bugs in the += additive assignment operator,
  including a bug introduced on 2021-04-11 that caused it to append to the
  value of a global variable when used on a local variable with the same name.

2022-09-24:

- In the emacs line editor, the Ctrl+R reverse-search prompt is now visually
  distinct from a literal control character ("^R: " instead of "^R").

- Fixed a crashing bug involving incorrect data alignment in variables of
  types defined by 'typeset -T'.

2022-09-11:

- Fixed a bug introduced in ksh93u+ 2012-04-23 that caused LINENO to have the
  wrong value after parsing a multi-line compound assignment.

- Fixed a bug in vi mode that caused reverse search to remain active after
  receiving an interrupt.

2022-09-01:

- Fixed a bug where 'command -x' would create a tracked alias for a command,
  causing 'whence' not to find an /opt/ast/bin built-in command correctly.

2022-08-30:

- In the vi line editor, 'C' and 'c$' at the start of a line now enter insert
  mode instead of beeping, and 'I' jumps to the first non-blank character on
  the line instead of the start of the line. These changes are consistent
  with standard vi(1) behavior and with Bolsky & Korn (1995, p. 121).

- Aliases for many GNU long options have been added to the /opt/ast/bin
  built-in commands. Additionally, 'kill -s' now has a --signal long option
  alias compatible with the util-linux option.

- All of the /opt/ast/bin built-ins available in src/lib/libcmd (excluding